k8s/auth-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auth-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: auth-api
  template:
    metadata:
      labels:
        app: auth-api
    spec:
      containers:
      - name: auth-api
        image: auth-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8081
