k8s/logmesssage-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: log-message-processor
spec:
  replicas: 1
  selector:
    matchLabels:
      app: log-message-processor
  template:
    metadata:
      labels:
        app: log-message-processor
    spec:
      containers:
      - name: log-message-processor
        image: log-message-processor:latest
        imagePullPolicy: IfNotPresent
