k8s/todos-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: todos-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: todos-api
  template:
    metadata:
      labels:
        app: todos-api
    spec:
      containers:
      - name: todos-api
        image: todos-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8082
