k8s/user-deploy.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: users-api
spec:
  replicas: 2
  selector:
    matchLabels:
      app: users-api
  template:
    metadata:
      labels:
        app: users-api
    spec:
      containers:
      - name: users-api
        image: users-api:latest
        imagePullPolicy: IfNotPresent
        ports:
        - containerPort: 8083
