k8s/auth-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: auth-api
spec:
  selector:
    app: auth-api
  ports:
  - port: 8081
    targetPort: 8081
  type: ClusterIP
