k8s/todos-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: todos-api
spec:
  selector:
    app: todos-api
  ports:
  - port: 8082
    targetPort: 8082
  type: ClusterIP
