k8s/user-service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: users-api
spec:
  selector:
    app: users-api
  ports:
  - port: 8083
    targetPort: 8083
  type: ClusterIP
