k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: app-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: msoluwademilade.top
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend
            port:
              number: 8080
      - path: /api/auth
        pathType: Prefix
        backend:
          service:
            name: auth-api
            port:
              number: 8081
      - path: /api/users
        pathType: Prefix
        backend:
          service:
            name: users-api
            port:
              number: 8083
      - path: /api/todos
        pathType: Prefix
        backend:
          service:
            name: todos-api
            port:
              number: 8082
